Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: task-five
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: []
  egress:
    - to: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-api-allow
  namespace: task-five
spec:
  podSelector:
    matchLabels:
      app: admin-back-end-api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: admin-front-end
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: admin-front-end
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: non-admin-api-allow
  namespace: task-five
spec:
  podSelector:
    matchLabels:
      app: back-end-api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: front-end
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: front-end
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: non-admin-front-end-allow
  namespace: task-five
spec:
  podSelector:
    matchLabels:
      app: front-end
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: back-end-api
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: back-end-api
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-front-end-allow
  namespace: task-five
spec:
  podSelector:
    matchLabels:
      app: admin-front-end
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: admin-back-end-api
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: admin-back-end-api
